--- a/style.css
+++ b/style.css
@@ -5,4 +5,17 @@ width: 70%;
 }
 h1, h2, h3 {
     font-family: sans-serif;
+    margin-top: 1.5em;
+}
+h1 {
+    font-size: 32px;}
+table, th, td {
+    border: 1px solid black;
+ }
+figcaption {
+    font-style: italic;
+}
+ img {
+    float: right;
+    margin: 10px 10px 10px 0px;
 }
